--- a/Project/AppBaoThuc/app/src/main/res/layout/fragment_math_challenge2.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/fragment_math_challenge2.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#A09B9B"
-    tools:context=".MainActivity">
+    android:background="#A09B9B">
 
     <LinearLayout
         android:layout_width="match_parent"
