--- a/Project/AppBaoThuc/app/src/main/res/layout/item_alarm.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/item_alarm.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraint_layout_parent"
     android:layout_width="match_parent"
     android:layout_height="100dp"
@@ -9,11 +10,13 @@
     android:layout_marginEnd="5dp"
     android:background="#4E4E4E">
 
-    <CheckBox
-        android:id="@+id/check_box_enable"
+    <android.support.v7.widget.SwitchCompat
+        android:id="@+id/switchCompatEnable"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:theme="@style/ToggleSwitchTheme"/>
 
     <TextView
         android:id="@+id/text_view_hour"
@@ -24,7 +27,7 @@
         android:textSize="40sp"
         app:layout_constraintBottom_toTopOf="@+id/text_view_describe_repeat_day"
         app:layout_constraintEnd_toStartOf="@+id/text_view_colon"
-        app:layout_constraintStart_toEndOf="@+id/check_box_enable"
+        app:layout_constraintStart_toEndOf="@+id/switchCompatEnable"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -54,27 +57,22 @@
         android:id="@+id/text_view_describe_repeat_day"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
         android:layout_marginBottom="10dp"
         android:text="Everyday"
         android:textColor="@android:color/white"
-        android:textSize="20sp"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/check_box_enable" />
-
-    <ImageButton
-        android:id="@+id/button_more"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:background="#00000000"
-        android:src="@drawable/ic_more"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintStart_toEndOf="@id/switchCompatEnable"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_hour" />
 
     <ImageButton
         android:id="@+id/button_alarm_type"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_marginEnd="16dp"
         android:background="#00000000"
         android:src="@drawable/ic_math_36"
-        app:layout_constraintRight_toLeftOf="@+id/button_more" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
