--- a/Project/AppBaoThuc/app/src/main/res/values/colors.xml
+++ b/Project/AppBaoThuc/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="backgroundlayout">#535454</color>
     <color name="colortext">#DDDDDD</color>
     <color name="colortext2">#A4A2A2</color>
+    <color name="white1">#FFFFFF</color>
     <color name="colorBlue">#0208C7</color>
     <color name="xam">#7F7F7F</color>
     <color name="xamDen">#313030</color>
