--- a/Project/AppBaoThuc/app/src/main/res/layout/fragment_app_setting.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/fragment_app_setting.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white">
@@ -56,7 +57,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:text="text_view_can_mute_alarm_for"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:text="text_view_auto_dismiss_after"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -118,5 +119,32 @@
                 android:text="12 giờ"
                 android:textSize="20sp" />
         </RadioGroup>
+
+        <Button
+            android:id="@+id/btnMute"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:text="Button"
+            app:layout_constraintStart_toEndOf="@+id/text_view_mute_alarm_for"
+            tools:layout_editor_absoluteY="0dp" />
+
+        <Button
+            android:id="@+id/btnCanMute"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:text="Button"
+            app:layout_constraintStart_toEndOf="@+id/text_view_can_mute_alarm_for"
+            app:layout_constraintTop_toBottomOf="@+id/btnMute" />
+
+        <Button
+            android:id="@+id/btnDismiss"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:text="Button"
+            app:layout_constraintStart_toEndOf="@+id/text_view_auto_dismiss_after"
+            app:layout_constraintTop_toBottomOf="@+id/btnCanMute" />
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
