--- a/Training/QuanLyDonHang/app/src/main/res/layout/activity_don_dh.xml
+++ b/Training/QuanLyDonHang/app/src/main/res/layout/activity_don_dh.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -37,18 +38,20 @@
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="#C9C8C8">
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/textViewSoDDHEdit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Số Đơn Đặt Hàng:" />
+                android:text="Số Đơn Đặt Hàng:"
+                android:textColor="#020000" />
 
             <EditText
                 android:id="@+id/editTextSoDDH"
@@ -64,57 +67,69 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp">
+            android:background="#E8E6EE"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp">
 
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Mã Khách Hàng:" />
+                android:text="Mã Khách Hàng:"
+                android:textColor="#020000" />
+
             <Spinner
                 android:id="@+id/spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
-                android:textSize="20dp"
+                android:spinnerMode="dialog"
 
-                android:spinnerMode="dialog" />
+                android:textSize="20dp" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp">
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Ngày Đặt Hàng:" />
+                android:text="Ngày Đặt Hàng:"
+                android:textColor="#020000" />
 
-            <EditText
-                android:id="@+id/editTextNgayDH"
+            <TextView
+                android:id="@+id/textViewNgayDH"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:editable="false"
                 android:ems="10"
-                android:inputType="none" />
+                android:inputType="none"
+                android:paddingLeft="3dp"
+                android:text="..."
+                android:textColor="#0E0000"
+                android:textSize="18sp" />
 
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent"
+            android:background="#E8E6EE">
 
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Số Ngày:" />
+                android:text="Số Ngày:"
+                android:textColor="#020000" />
 
             <EditText
                 android:id="@+id/editTextSoNgay"
@@ -135,7 +150,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Tình Trạng:" />
+                android:text="Tình Trạng:"
+                android:textColor="#020000" />
 
             <EditText
                 android:id="@+id/editTextTinhTrang"
