--- a/Training/QuanLyDonHang/app/src/main/res/layout/dialogfragment_khach_hang.xml
+++ b/Training/QuanLyDonHang/app/src/main/res/layout/dialogfragment_khach_hang.xml
@@ -42,6 +42,15 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="40dp"
         android:text="Xóa khách hàng" />
+
+    <Button
+        android:id="@+id/buttonKHMuaNhieuNhat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="40dp"
+        android:text="TOP 3 KHÁCH HÀNG MUA NHIỀU NHẤT" />
+
 </LinearLayout>
