--- a/Training/QuanLyDonHang/app/src/main/res/layout/list_mat_hang.xml
+++ b/Training/QuanLyDonHang/app/src/main/res/layout/list_mat_hang.xml
@@ -1,115 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="70dp"
+    android:layout_marginStart="5dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginEnd="5dp"
+    android:background="#54D17E"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="5dp"
-        android:background="@android:color/darker_gray"
-        android:orientation="vertical">
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textviewMaHG"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/vien_textview"
+            android:gravity="center"
+            android:text="MAHG"
+            android:textSize="13sp" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:layout_weight="3"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView7MH"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Mã Mặt Hàng:  "
-                android:textColor="@android:color/holo_red_dark"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/textViewMaMHAdapter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:paddingStart="5dp"
+                android:id="@+id/textviewTenHG"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="001"
-                android:textColor="@android:color/holo_red_dark"
-                android:textSize="18sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="20dp"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/textView9MH"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Tên Mặt Hàng:"
-                    android:textColor="@android:color/background_dark" />
-
-                <TextView
-                    android:id="@+id/textView10MH"
-                    android:layout_width="108dp"
-                    android:layout_height="wrap_content"
-                    android:text="Đặc Điểm:"
-                    android:textColor="@android:color/background_dark" />
-
-                <TextView
-                    android:id="@+id/textView8MH"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Đơn Vị Tính:"
-                    android:textColor="@android:color/background_dark" />
-
-                <TextView
-                    android:id="@+id/textView11MH"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Đơn Giá:"
-                    android:textColor="@android:color/background_dark" />
-            </LinearLayout>
+                android:gravity="center_vertical"
+                android:text="Tên :"
+                android:textSize="15sp"
+                android:background="#6CF5CD"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:paddingStart="5dp">
 
                 <TextView
-                    android:id="@+id/textViewTenMHAdapter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Ti vi Sô ny"
-                    android:textColor="@android:color/background_dark" />
+                    android:id="@+id/textviewDonGia"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:text="Đơn giá: "
+                    android:textSize="15sp" />
 
                 <TextView
-                    android:id="@+id/textViewDacDiemAdapter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Cảm ứng"
-                    android:textColor="@android:color/background_dark" />
-
-                <TextView
-                    android:id="@+id/textViewDVTAdapter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Cái"
-                    android:textColor="@android:color/background_dark" />
-
-                <TextView
-                    android:id="@+id/textViewDonGiaAdapter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="1000000"
-                    android:textColor="@android:color/background_dark" />
+                    android:id="@+id/textviewDonViTinh"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:text="Đơn vị tính: "
+                    android:textSize="15sp" />
             </LinearLayout>
-
         </LinearLayout>
     </LinearLayout>
 
+    <TextView
+        android:layout_marginStart="5dp"
+        android:id="@+id/textviewDacDiem"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center_vertical"
+        android:text="Đặc điểm: "
+        android:textSize="15sp" />
 </LinearLayout>
