--- a/Project/AppBaoThuc/app/src/main/res/layout/fragment_app_setting.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/fragment_app_setting.xml
@@ -125,9 +125,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="3dp"
-            android:text="Button"
+            android:text="Mute"
             app:layout_constraintStart_toEndOf="@+id/text_view_mute_alarm_for"
-            tools:layout_editor_absoluteY="0dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/btnCanMute"
