--- a/Project/AppBaoThuc/app/src/main/res/values/styles.xml
+++ b/Project/AppBaoThuc/app/src/main/res/values/styles.xml
@@ -1,5 +1,7 @@
 <resources>
 
+
+
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
@@ -35,5 +37,12 @@
     </style>
     <style name="ToggleSwitchTheme" parent="ThemeOverlay.AppCompat.Light">
         <item name="colorAccent">#46bdbf</item>
+    </style>
+
+    <style name="myTimePickerStyle" parent="@android:style/Widget.Material.Light.TimePicker">
+        <item name="android:numbersTextColor">#ffffff</item>
+        <item name="android:numbersBackgroundColor">@color/white1</item>
+        <item name="android:numbersSelectorColor">#88000000</item>
+        <item name="android:headerBackground">@color/white1</item>
     </style>
 </resources>
