--- a/Project/AppBaoThuc/app/src/main/res/layout/fragment_setting_alarm.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/fragment_setting_alarm.xml
@@ -24,11 +24,10 @@
 
         <TimePicker
             android:id="@+id/timePicker"
+            style="@style/myTimePickerStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:timePickerMode="spinner"
-            android:theme="@style/myTimePickerStyle"
-            app:buttonTint="@color/colortext" ></TimePicker>
+            android:timePickerMode="spinner"></TimePicker>
 
         <LinearLayout
             android:layout_width="match_parent"
