--- a/Project/AppBaoThuc/app/src/main/res/layout/fragment_upcoming_alarm.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/fragment_upcoming_alarm.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_list_alarm"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/textviewTimeRemaining"
+        tools:layout_editor_absoluteX="16dp">
 
     </android.support.v7.widget.RecyclerView>
 
@@ -20,4 +23,15 @@
         android:background="@drawable/ic_add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
+
+    <TextView
+        android:id="@+id/textviewTimeRemaining"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Time Remaining"
+        android:gravity="center"
+        android:textSize="17sp"
+        android:textColor="#fff"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="2dp" />
 </android.support.constraint.ConstraintLayout>
