--- a/Project/AppBaoThuc/app/src/main/res/layout/fragment_upcoming_alarm.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/fragment_upcoming_alarm.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view_list_alarm"
+        android:id="@+id/recyclerViewListAlarm"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/textviewTimeRemaining"
@@ -15,7 +15,7 @@
     </android.support.v7.widget.RecyclerView>
 
     <ImageButton
-        android:id="@+id/button_add_alarm"
+        android:id="@+id/buttonAddAlarm"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_marginEnd="10dp"
