--- a/Project/AppBaoThuc/app/src/main/res/anim/anim_button_add_alarm_press.xml
+++ b/Project/AppBaoThuc/app/src/main/res/anim/anim_button_add_alarm_press.xml
@@ -11,6 +11,5 @@
         android:toAlpha="0.1"
         android:repeatCount="infinite"
         android:repeatMode="reverse"
-        android:duration="1000"
-        android:startOffset="1000"/>
+        android:duration="1000"/>
 </set>
