--- a/Project/AppBaoThuc/app/src/main/res/layout/fragment_type.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/fragment_type.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layoutType"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/backgroundlayout"
@@ -191,8 +192,8 @@
                 android:layout_height="60dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
-                android:contentDescription="@null"
-                android:background="@drawable/icons8_math_filled_60" />
+                android:background="@drawable/icons8_math_filled_60"
+                android:contentDescription="@null" />
 
             <LinearLayout
                 android:layout_width="match_parent"
