--- a/Project/AppBaoThuc/app/src/main/res/layout/fragment_challenge_dialog.xml
+++ b/Project/AppBaoThuc/app/src/main/res/layout/fragment_challenge_dialog.xml
@@ -51,7 +51,7 @@
             app:layout_constraintTop_toBottomOf="@id/text_view_ringtone_name">
 
             <TextView
-                android:id="@+id/textviewHour"
+                android:id="@+id/textViewHour"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="23sp"
@@ -60,22 +60,22 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textviewColon"
+                android:id="@+id/textViewColon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=":"
                 android:textSize="23sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/textviewHour"
+                app:layout_constraintStart_toEndOf="@id/textViewHour"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textviewMinute"
+                android:id="@+id/textViewMinute"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="23sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/textviewColon"
+                app:layout_constraintStart_toEndOf="@id/textViewColon"
                 app:layout_constraintTop_toTopOf="parent" />
         </android.support.constraint.ConstraintLayout>
 
